@@ -2,15 +2,17 @@
 Hash: SHA256
 
 DIST data_objects-0.10.2.gem 27648 RMD160 af9ec4381578fc50c4011571fa05d88010efcc51 SHA1 e4cd8068ad1ce6a8510f35c543226d0430b92232 SHA256 9a05a54c477b93393008c0cc2da2a97c6dd9deef9cbacc60dd79bc104fe6cdad
+DIST data_objects-0.10.3.gem 28160 RMD160 ce1434ca08ce36ece5666f5fb1e58f498c541a94 SHA1 0aa31e7c4239c23bc854a469558fd7a86a6c2a9f SHA256 fb4507a13f9e8f914af2839551528b772701558e2fc81e8c906d9f1941f5ec84
 DIST data_objects-0.9.9.gem 15360 RMD160 8250b2e0d6bb5bd0ce2eca61576b0fc2c44d880f SHA1 70431f0f2a5b642b386c9bb36d37194edf63a55a SHA256 947e296fd2ddacbb4bd56f0dc93d3925bed31709fbd70355e3116fa8550294a4
 EBUILD data_objects-0.10.2.ebuild 675 RMD160 bdae9b7ce0d3f412b3d5f0bb0d6acd88ed490d29 SHA1 9c269202e3715f97fb57a0a501b627f8aa5af783 SHA256 b93a4a71edac021443fa04ffe8d6fcf2b2bc0d2e457c4c68ef6e3c05d41aac97
+EBUILD data_objects-0.10.3.ebuild 899 RMD160 0d38f29f8fcc919fbf6da14621f5f5b511205e26 SHA1 7c64b369ebcf0f2d41e1b81ad24ca202ae374031 SHA256 db16287961604f7b1baac2d502c69c718dca407080f77d2dedaf3d0433c43e35
 EBUILD data_objects-0.9.9-r1.ebuild 643 RMD160 fc3804e4351d3b01ced0675a117e316958dc42ea SHA1 49244ab3c7712f0e3bd815d98a43487b8e2be801 SHA256 31c35eb2360f349b7574388040b409fc7df9e75fca66e9f95da5504bab527523
-MISC ChangeLog 699 RMD160 eea045ab64976a79c4b78d9f59f169fd5526bac8 SHA1 e2d15e9940acdafae8ab41ee08c2f3f2cdcf0bf3 SHA256 eb112f81cbf1b42ea4db6e74eaabf4b0dc2bf87186cb2dfb298ebe4ff9af72f1
+MISC ChangeLog 833 RMD160 d569fc545428d86d9a42d3eabcef97e44a207139 SHA1 801885c42f0d90a854362a0de02d228d3ea7fd7d SHA256 a6bda2accacb9275524c845b5e20d6dcc62cd59d43db6198178cad06755dffc4
 MISC metadata.xml 159 RMD160 eb364108353c7843cf1c01fba92129aaa46a0334 SHA1 0734f4c292968932afc57d0aa3a681c0b75b7bfc SHA256 abab7965b1f41e0acf6b54c554945c1c9fa35b5afab848d784dc58c298bc4679
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.15 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAkxnqYMACgkQZihJkut28StjpQD+Lf69pVXab2+ftT7UqojP4XCF
-qtnWnhiQFfysySBbVMwBAK+eKCPT0a6Ntl0v5FwEK1TcPxxCd4dHLkctSowOxFOM
-=PHlR
+iF4EAREIAAYFAk20bFsACgkQrnu0mw69JkpsawD+OFFETk2IyVpO3NRx1YP9J9JU
+Mq1nQmUrjKOcHP9kr7YA/3V0jUd4n3liwKyII3ZikoNGiB1F/HGxa802CC70wuRM
+=ShAD
 -----END PGP SIGNATURE-----
