@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/data_objects
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*data_objects-0.10.3 (24 Apr 2011)
+
+  24 Apr 2011; Hans de Graaff <graaff@gentoo.org>
+  +data_objects-0.10.3.ebuild:
+  Version bump.
 
 *data_objects-0.10.2 (15 Aug 2010)
 
